[tool.poetry]
name = "torchreinforce"
version = "0.1.0"
description = ""
authors = ["Lucien Martin-Gaffé <lucien.martingaffe@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
torch = "^1.11.0"
tensorboard = {version = "^2.9.0", extras = ["tensorboard"]}

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pygame = "^2.0.1"
black = "^22.3.0"
gym = "^0.23.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
